--- a/Main_window.ui
+++ b/Main_window.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1062</width>
+    <width>839</width>
     <height>750</height>
    </rect>
   </property>
@@ -17,8 +17,23 @@
    <layout class="QHBoxLayout" name="horizontalLayout_3">
     <item>
      <widget class="QTabWidget" name="tabWidget">
+      <property name="tabShape">
+       <enum>QTabWidget::Triangular</enum>
+      </property>
       <property name="currentIndex">
        <number>0</number>
+      </property>
+      <property name="documentMode">
+       <bool>false</bool>
+      </property>
+      <property name="tabsClosable">
+       <bool>false</bool>
+      </property>
+      <property name="movable">
+       <bool>true</bool>
+      </property>
+      <property name="tabBarAutoHide">
+       <bool>false</bool>
       </property>
       <widget class="QWidget" name="tab_1">
        <attribute name="title">
@@ -29,7 +44,7 @@
          <widget class="QLineEdit" name="lineEdit"/>
         </item>
         <item>
-         <widget class="QTableWidget" name="PositonsTable">
+         <widget class="QTableWidget" name="PositonsTableWidget">
           <property name="contextMenuPolicy">
            <enum>Qt::CustomContextMenu</enum>
           </property>
@@ -122,7 +137,45 @@
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayout_2">
         <item>
-         <widget class="QTreeWidget" name="treeWidget">
+         <widget class="QTableWidget" name="PropertiesTableWidget">
+          <property name="sizeAdjustPolicy">
+           <enum>QAbstractScrollArea::AdjustToContents</enum>
+          </property>
+          <property name="alternatingRowColors">
+           <bool>true</bool>
+          </property>
+          <property name="textElideMode">
+           <enum>Qt::ElideLeft</enum>
+          </property>
+          <property name="rowCount">
+           <number>20</number>
+          </property>
+          <attribute name="horizontalHeaderDefaultSectionSize">
+           <number>300</number>
+          </attribute>
+          <attribute name="verticalHeaderVisible">
+           <bool>false</bool>
+          </attribute>
+          <row/>
+          <row/>
+          <row/>
+          <row/>
+          <row/>
+          <row/>
+          <row/>
+          <row/>
+          <row/>
+          <row/>
+          <row/>
+          <row/>
+          <row/>
+          <row/>
+          <row/>
+          <row/>
+          <row/>
+          <row/>
+          <row/>
+          <row/>
           <column>
            <property name="text">
             <string>Nazwa</string>
@@ -133,52 +186,49 @@
             <string>Wartość</string>
            </property>
           </column>
-          <item>
+          <item row="0" column="0">
            <property name="text">
-            <string>pow.siatki</string>
-           </property>
-           <property name="text">
-            <string>10.75</string>
+            <string>pow_siatki</string>
            </property>
           </item>
-          <item>
+          <item row="1" column="0">
            <property name="text">
-            <string>Długość budynku w m</string>
+            <string>dlugosc</string>
            </property>
+          </item>
+          <item row="1" column="1">
            <property name="text">
             <string>6.47</string>
            </property>
           </item>
-          <item>
+          <item row="2" column="0">
            <property name="text">
-            <string>szerokość budynku w m</string>
+            <string>szerokosc</string>
            </property>
+          </item>
+          <item row="2" column="1">
            <property name="text">
             <string>5.47</string>
            </property>
           </item>
-          <item>
+          <item row="3" column="0">
            <property name="text">
-            <string>pow.fundamentu</string>
-           </property>
-           <property name="text">
-            <string>dł*szerokość</string>
+            <string>ilosc_szklanek</string>
            </property>
           </item>
-          <item>
+          <item row="3" column="1">
+           <property name="text">
+            <string>6</string>
+           </property>
+          </item>
+          <item row="4" column="0">
            <property name="text">
             <string>obwód</string>
            </property>
-           <property name="text">
-            <string>(dł+szer)*2</string>
-           </property>
           </item>
-          <item>
+          <item row="5" column="0">
            <property name="text">
-            <string>Czy komin?</string>
-           </property>
-           <property name="text">
-            <string>TAK</string>
+            <string>powierzchnia_fundamentu</string>
            </property>
           </item>
          </widget>
@@ -204,7 +254,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1062</width>
+     <width>839</width>
      <height>26</height>
     </rect>
    </property>
